-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
6.0.0 Beta2
-
None
I'm currently trying to get my project running with Qt6 and ran into an update problem with creating using FBOs in QQuickItem::updatePaintNode. Only the very first call works, from then on it always failed.
When enabling OpenGL error messages I can see the following: QOpenGLDebugMessage("APISource", 4, "GL_INVALID_ENUM in glDrawBuffers(invalid buffer GL_BACK)", "HighSeverity", "ErrorType")
The same code works fine with Qt 5.15. When comparing Qt 6 and Qt 5.15 in the debugger I can see, that the QRHI code is very different and does not run into glDrawBuffers with Qt 5.
Attached you find a minimal demo - it does nothing useful and is leaking. But when resizing the window you can see the error messages.